<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="32dp"
    tools:context=".view.main.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="72dp"
        android:text="@string/title_currency_converter"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvTitleFrom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilForm"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/amount"
        app:layout_constraintBottom_toBottomOf="@id/spFromCurrency"
        app:layout_constraintEnd_toStartOf="@id/spFromCurrency"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/spFromCurrency">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spFromCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:entries="@array/currency_codes"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/spToCurrency"
        app:layout_constraintStart_toEndOf="@id/tilForm"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spToCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/currency_codes"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="@id/spFromCurrency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/spFromCurrency"
        app:layout_constraintTop_toTopOf="@id/spFromCurrency" />

    <TextView
        android:id="@+id/tvTitleFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/from"
        app:layout_constraintBottom_toTopOf="@id/tilForm"
        app:layout_constraintStart_toStartOf="@id/spFromCurrency" />

    <TextView
        android:id="@+id/tvTitleTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/to"
        app:layout_constraintBottom_toTopOf="@id/tilForm"
        app:layout_constraintStart_toStartOf="@id/spToCurrency" />

    <TextView
        android:id="@+id/tvTitleResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="12dp"
        android:text="@string/result"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/tilForm"
        app:layout_constraintTop_toBottomOf="@id/tilForm" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="12dp"
        android:text="@string/price"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/spToCurrency"
        app:layout_constraintStart_toEndOf="@id/tvTitleResult"
        app:layout_constraintTop_toBottomOf="@id/tilForm" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConvert"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/convert"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@id/spToCurrency"
        app:layout_constraintStart_toStartOf="@id/tilForm"
        app:layout_constraintTop_toBottomOf="@id/tvResult" />
</androidx.constraintlayout.widget.ConstraintLayout>